--- a/_posts/0000-01-02-Humaniuc.md
+++ b/_posts/0000-01-02-Humaniuc.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Humanuc Text
+Humanuc Text is looking great
 Use the left arrow to go back!
